# folio

./: .gitignore  AGENTS.md  README.md  TEST_RESULTS.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
.githooks/: pre-commit
.github/workflows/: deploy-pages.yml
agent/: backend-claude.mjs  backend-codex.mjs  backend-opencode.mjs  broker.mjs  cli.mjs  mcp.mjs  proc.mjs  session-store.mjs  tools.mjs  tsconfig.json
docs/: AGENT_INTEGRATION_PLAN.md  ARCHITECTURE.md  FILE_FORMAT.md  PRODUCT_INVARIANTS.md  TESTING_AND_RELEASE.md
scripts/: archive-smoke.ts  check-docs.mjs  copy-smoke-css.mjs  install-hooks.mjs  release-desktop.ps1  ui-smoke.mjs
skills/folio-app/: SKILL.md
skills/folio-app/agents/: openai.yaml
skills/inktile-app/: SKILL.md
skills/inktile-app/agents/: openai.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/agent/: animations.ts  applyOp.ts  connection.ts  protocol.ts
src/components/: BlockRenderer.tsx  DrawingCanvas.tsx  EditorContextMenu.tsx  ElementScrollbar.tsx  ExportDialog.tsx  FolioLibrary.tsx  HomeContextMenu.tsx  InkjetMarkdown.tsx  InkjetPanel.tsx  InktileHome.tsx  InktileLibrary.tsx  LinkPreview.tsx  MathEditor.tsx  MediaBlocks.tsx  PageInsertControl.tsx  PageStack.tsx  PageView.tsx  RowScrollbar.tsx  TagDialog.tsx  TextBlockView.tsx  TextContextMenu.tsx  TileSelectionContext.tsx  Toolbar.tsx  VariantBlockView.tsx  WorkspaceScrollbar.tsx  icons.tsx
src/document/: DocumentContext.tsx  factories.ts  mediaTypes.ts  types.ts
src/persistence/: autosave.ts  database.ts  exportDocument.ts  fileSystem.ts  folioArchive.ts  inktileArchive.ts  library.ts  preferences.ts  tags.ts
src/persistence/storage/: files.ts  idb.ts  index.ts  types.ts
src/styles/: app.css
src/utils/: editorHtml.ts  hash.ts  mathField.ts  richText.ts
