[package]
name = "inktile"
version = "0.1.0"
description = "A compact, local-first document editor"
authors = ["Inktile"]
edition = "2021"

[lib]
name = "inktile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Enables Tauri's bundled asset protocol for production builds. The Tauri CLI
# passes this feature automatically; declaring it also makes direct Cargo
# release builds self-contained rather than pointing at the development server.
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Blocking HTTP for link-preview metadata (Open Graph unfurling). Small on purpose —
# a single GET with a timeout; reqwest would drag in a full async stack.
ureq = "2"
# Decodes the save destination header (encodeURIComponent on the JS side) for the
# atomic save command; already in the tree via tauri.
percent-encoding = "2"
